--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "mobx-react": "^4.1.3",
     "react": "~15.4.1",
     "react-native": "0.42.0",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-material-kit": "^0.4.1",
+    "react-native-router-flux": "^3.38.0",
     "react-native-signature-capture": "^0.4.5",
+    "react-native-vector-icons": "^4.0.0",
     "react-router-native": "^4.0.0",
     "snoowrap": "^1.12.0"
   },
