--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "lodash": "^4.17.4",
     "mobx": "^3.1.7",
     "mobx-react": "^4.1.3",
+    "module-resolver": "^1.0.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "~15.4.1",
     "react-native": "0.42.0",
+    "react-native-action-button": "^2.6.8",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-maps": "^0.14.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-router-flux": "^3.38.0",
     "react-native-signature-capture": "^0.4.5",
+    "react-native-signature-pad": "^0.0.8",
     "react-native-vector-icons": "^4.0.0",
     "react-router-native": "^4.0.0",
     "realm": "^1.2.0",
-    "snoowrap": "^1.12.0"
+    "snoowrap": "^1.12.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
